[package]
name = "leptos_chart"
version = { workspace = true }
edition = "2021"
authors = ["LangPham"]
license = "MIT"
repository = "https://github.com/theta-vn/leptos_chart"
description = "Chart library for leptos"
readme = "../README.md"

[dependencies]
leptos = {version = "0.5",  features = ["csr"]}
theta-chart = { version = "0.0.6"}
log = "0.4"

[features]
default = ["csr"]
core = []
Axes = []
debug = []

PieChart = ["core"]
RadarChart = ["core"]

BarChart = ["core", "Axes"]
BarChartGroup = ["core", "Axes"]
LineChart = ["core", "Axes"]
LineChartGroup = ["core", "Axes"]
ScatterChart = ["core", "Axes"]

csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]
