[package]
name = "leptos_chart"
version = { workspace = true }
edition = "2021"
authors = ["LangPham"]
license = "MIT"
repository = "https://github.com/theta-vn/leptos_chart"
description = "Chart library for leptos"
readme = "../README.md"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
theta-chart = { version = "0.0.8" }
log = "0.4"

[features]
default = ["csr"]
core = []
core_chart = []
core_polar = []
Axes = []
debug = []

PieChart = ["core", "core_polar"]
RadarChart = ["core", "core_polar"]

BarChart = ["core", "core_chart", "Axes"]
BarChartGroup = ["core", "core_chart", "Axes"]
LineChart = ["core", "core_chart", "Axes"]
LineChartGroup = ["core", "core_chart", "Axes"]
ScatterChart = ["core", "core_chart", "Axes"]
Voronoi = ["core", "core_chart", "Axes"]

csr = ["leptos/csr"]
hydrate = ["leptos/hydrate"]
ssr = ["leptos/ssr"]
