[package]
name = "pie_chart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.4.1", features = ["csr"] }
leptos_chart = { path = "../../leptos_chart", version = "0.1.0", features = [
  "BarChartGroup",
  "debug",
] }
wasm-logger = "0.2.0"
