[package]
name = "line_chart_group"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {path = "../../../leptos-0.5.0-alpha/leptos", version = "0.5.0-alpha", features=["csr"]}
leptos_chart = {path = "../../leptos_chart", version = "0.1.0", features = ["LineChartGroup", "debug"]}
wasm-logger = "0.2.0"