[package]
name = "pie_chart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {version = "0.4.1"}
leptos_chart = {path = "../../leptos_chart", version = "0.1.0", features = ["PieChart", "debug"]}
log = "0.4.6"
wasm-logger = "0.2.0"